learning css colors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>The Basic Language of the Web: HTML</title>
   </head>
   <body>
-    <header>
+
+
+    <header class="main-header">
       <h1>📘 The Code Magazine</h1>
 
       <nav>
@@ -65,7 +67,7 @@
 
       <p>In HTML, each element is made up of 3 parts:</p>
       <ol>
-        <li>The opening tag</li>
+        <li class="first-li">The opening tag</li>
         <li>The closing tag</li>
         <li>The actual element</li>
       </ol>
@@ -86,7 +88,7 @@
       </p>
 
       <ul>
-        <li>To be able to use the fundamental web dev language</li>
+        <li class="first-li">To be able to use the fundamental web dev language</li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
           Worpress or Wix
