--- a/challenge.html
+++ b/challenge.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="index.css" rel="stylesheet" />
     <title>Challange</title>
   </head>
   <body>
-    <article>
-      <h1>Converse Chuck Taylor All Star Low Top</h1>
+    <article class="product">
+      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
 
       <img
         src="img/challenges.jpg"
@@ -15,24 +16,24 @@
         height="250"
         width="250"
       />
-      <p><strong>$65.00</strong></p>
+      <p class="price"><strong>$65.00</strong></p>
 
-      <p>Free shipping</p>
+      <p class="shipping">Free shipping</p>
       <p>
         Ready to dress up or down, these classic canvas are an everydat wardrobe
         staple
       </p>
-      <a href="#">More Information</a>
+      <a class="more-info" href="#">More Information</a>
 
-      <h2>Product details</h2>
+      <h3 class="details-title">Product details</h3>
 
-      <ul>
+      <ul class="details-list">
         <li>Lightweight,durable canvas sneaker</li>
         <li>lightly padded footbed for added comfort</li>
         <li>Iconic Chuck Taylor ankle patch</li>
       </ul>
 
-      <button>Add to cart</button>
+      <button class="add-cart">Add to cart</button>
     </article>
   </body>
 </html>
