--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>📘 The Code Magazine</h1>
 
       <nav>
+        <!-- <p>This is a Navigation</p> -->
         <a href="blog.html">A Blog page </a>
         <a href="#">Challanges</a>
         <a href="#">Flexbox</a>
@@ -91,7 +92,7 @@
         <li class="first-li">To be able to use the fundamental web dev language</li>
         <li>
           To hand-craft beautiful websites instead of relying on tools like
-          Worpress or Wix
+          Wordpress or Wix
         </li>
         <li>To build web applications</li>
         <li>To impress friends</li>
