centering content on a page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>The Basic Language of the Web: HTML</title>
   </head>
   <body>
+    
 
+     <div class="container">            
 
     <header class="main-header">
       <h1>📘 The Code Magazine</h1>
@@ -137,5 +139,6 @@
     <footer>
       <p id="copyright">copyright &copy; 2027 by the Code Magazine</p>
     </footer>
+    </div>
   </body>
 </html>
